--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -28,6 +28,7 @@ p{
     padding: 3vh;
     color: white;
     width: 40%;
+    padding-top: 1.5vh;
   }
   
   #GeneralSkill {
@@ -39,6 +40,8 @@ p{
     padding: 3vh;
     color: black;
     width: 80%;
+    padding-bottom: 0;
+    padding-top: 2vh;
   }
   
   .CVContent {
@@ -69,10 +72,15 @@ p{
     align-items: baseline;
   }
 
+  .TextMotivMobil{
+    display: none;
+  }
+
   @media screen and (max-width: 415px) {
     .CVContent {
       display: flex;
       flex-direction: column-reverse;
+      text-align: center;
     }
   
     .LeftPart {
@@ -81,6 +89,21 @@ p{
   
     .RigthPart {
       width: auto;
+      padding-top: 2vh;
+    }
+
+    .TextMotivDestock{
+      display: none;
+    }
+
+    .TextMotivMobil{
+      display: block;
+      font-size: 1.2rem;
+    }
+
+    .TextFormationMobile {
+      display: flex;
+      flex-direction: column;
     }
   }
   
