--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -69,6 +69,15 @@
     font-size: 1.6rem;
   }
 
+  .IconBackground {
+    color: #FFFFFF;
+    font-size: 1.5rem;
+  }
+
+  .BtnLinkedinNav {
+    padding-right: 0 !important;
+  }
+
   @media screen and (max-width: 767px) {
     #TextNavBar {
       display: none;
@@ -92,6 +101,10 @@
     }
 
     #ContactDestock {
+      display: none;
+    }
+
+    .IconNav {
       display: none;
     }
   }
