--- a/src/components/PortFolio/Portfolio.css
+++ b/src/components/PortFolio/Portfolio.css
@@ -12,11 +12,16 @@
   .PortFolioContent {
     background-color: #121212;
     display: flex;
+    flex-direction: column;
+  }
+
+  .PortFolioContentCard {
+    display: flex;
     flex-direction: row;
   }
   
   @media screen and (max-width: 415px) {
-    .PortFolioContent {
+    .PortFolioContentCard {
       display: flex;
       flex-direction: column;
     }
