--- a/src/components/PortFolio/Portfolio.css
+++ b/src/components/PortFolio/Portfolio.css
@@ -19,8 +19,42 @@
     display: flex;
     flex-direction: row;
   }
+
+  .ActuContent {
+    display: flex;
+    flex-direction: row;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    border-radius: .25rem;
+    margin: 4vh;
+    background-color: #1D1D1D;
+    margin-bottom: 0;
+    justify-content: space-between;
+  }
+
+  .ActuGauche {
+    padding: 1vh;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .ActuDroite {
+    height: 100%;
+  }
+
+  .TextActu {
+    color: #FFF;
+    font-size: 1.2rem;
+    text-align: center;
+  }
+
+  #TextActuBottom {
+    margin-bottom: 0;
+    padding-bottom: 2vh;
+  }
  
-  @media screen and (max-width: 415px) {
+  @media screen and (max-width: 767px) {
     .PortFolioContentCard {
       display: flex;
       flex-direction: column;
@@ -28,6 +62,15 @@
 
     .card-img-top {
       height: 100%;
+    }
+
+    .ActuContent {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .ActuGauche {
+      width: 100%;
     }
   }
   
