--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -40,7 +40,7 @@
   }
   
   .NavBarContent {
-    background-color: #212121;
+    background-color: #1D1D1D;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   }
   
