Remove background color of button dropdown

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -16,10 +16,10 @@
 }
   
   #BtnContactDestock {
-    background-color: #212121 !important;
-    border-color: #212121 !important;
+    background-color: #1D1D1D !important;
+    border-color: #1D1D1D !important;
     color: #FFFFFF !important;
-    box-shadow: 0 2px 4px #212121;
+    box-shadow: 0 2px 4px #1D1D1D;
   }
 
 .dropdown-menu {
