--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -33,7 +33,7 @@
     background-color: white !important;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     margin: 1vh;
-    background-color: #2d2d2d !important;
+    background-color: #121212 !important;
     text-align: center;
     border-radius: .25rem !important;
   }
