feat(NavBar): add border bottom

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -42,6 +42,7 @@
   .NavBarContent {
     background-color: #1D1D1D;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    border-bottom: solid #03DAC6;
   }
   
   .linkNavBarPDFMobile {
