feat(Portfolio.css): change flex for the text

--- a/src/components/PortFolio/Portfolio.css
+++ b/src/components/PortFolio/Portfolio.css
@@ -37,7 +37,7 @@
     width: 75%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .ActuDroite {
