feat(card.css): add responsive code for card

--- a/src/components/PortFolio/SiteCard/Card.css
+++ b/src/components/PortFolio/SiteCard/Card.css
@@ -1,36 +1,11 @@
-.card-body {
-    text-align: center;
-  }
-  
-  .btn-secondary {
-    background-color: #373737 !important;
-    border-color: #373737 !important;
-    color: #FFF !important;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  
-  .btn-secondary:hover {
-    background-color: #373737 !important;
-    border-color: #373737 !important;
-    color: #FFF !important;
-  }
-
-#SpaceButton{
-  margin-left: 1vh;
+.siteCard {
+  column-count: 2;
+  padding: 2vh;
 }
 
-.card {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-  border: 0 !important;
-  background-color: #212121 !important;
-  color: #FFFFFF;
-  margin-bottom: 4vh;
-  margin-left: 4vh;
-  margin-right: 4vh;
-}
-
-.TitleGroupCard {
-  font-size: 1.5rem;
-  font-family: "Cooper Hewitt";
-  border-bottom: solid #03DAC6;
+@media screen and (max-width: 767px) {
+  .siteCard {
+    column-count: 1;
+    padding: 0;
+  }
 }
