fix(app.css): add @media for safari

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
     flex-direction: column;
     background-color: #121212;
 }
+
+@media not all and (min-resolution:.001dpcm)
+{ @supports (-webkit-appearance:none) {
+    .AppContent {
+        height: auto;
+  }
+}}
