--- a/src/components/PortFolio/Portfolio.css
+++ b/src/components/PortFolio/Portfolio.css
@@ -22,28 +22,15 @@
 
   .ActuContent {
     display: flex;
-    flex-direction: row;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     border-radius: .25rem;
     margin: 4vh;
     background-color: #1D1D1D;
-    margin-bottom: 0;
-    justify-content: space-between;
-    margin-bottom: 4vh;
-  }
-
-  .ActuGauche {
-    padding: 1vh;
-    width: 75%;
-    display: flex;
-    flex-direction: column;
     justify-content: space-around;
-  }
-
-  .ActuDroite {
-    height: 100%;
+    margin-bottom: 1.5vh;
+    margin-top: 1.5vh;
     padding: 1vh;
-    padding-bottom: -1vh;
+    height: 100%;
   }
 
   .TextActu {
